third_party/move/move-compiler-v2/tests/match-checks/struct_literal_coverage.exp

Diagnostics:
error: match not exhaustive
  ┌─ tests/match-checks/struct_literal_coverage.move:6:16
  │
6 │         match (s) {
  │                ^
  │
  = missing `S{..}`

error: unreachable pattern
   ┌─ tests/match-checks/struct_literal_coverage.move:15:13
   │
15 │             S { x: 42, y } => y + 1,
   │             ^^^^^^^^^^^^^^
